<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="br.edu.ifsp.sbv.estacaometeorologica.LoginActivity">

    <TextView
        android:id="@+id/lblInfoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_info_login"
        android:paddingBottom="20dp" />

    <EditText
        android:id="@+id/txtChaveAcesso"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/lbl_chave_acesso"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:maxLength="255"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_style"
        style="@style/EditTextTheme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnEntrar"
            style="@style/ButtonAccentTheme"
            android:text="@string/btn_entrar"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="btnEntrar_Click" />

        <Button
            android:id="@+id/btnCancelar"
            style="@style/ButtonDefaultTheme"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/btnEntrar"
            android:layout_marginEnd="5dp"
            android:text="@string/btn_cancelar"
            android:onClick="btnCancelar_Click" />

    </RelativeLayout>

</LinearLayout>
